Order service swaggerga ulandi. Authorization yoqildi hammasi ishlavotti. Clean up ga tayyor
