# models/order.go
@@ -5,8 +5,8 @@ import "time"
 // Order ..
 type Order struct {
 	ID         string     `json:"id"`
-	Product_id string     `json:"product_id" binding:"required" example:"uuid"`
-	Client_id  string     `json:"client_id" binding:"required" example:"uuid"`
+	Product_id string     `json:"product_id" binding:"required" example:"111"`
+	Client_id  string     `json:"client_id" binding:"required" example:"111"`
 	Count      int32      `json:"count" binding:"required" example:"2"`
 	CreatedAt  time.Time  `json:"created_at"`
 	UpdatedAt  *time.Time `json:"updated_at"`
@@ -14,11 +14,11 @@ type Order struct {
 
 // CreateOrderModul ..
 type CreateOrderModul struct {
-	Client_id  string      `json:"client_id" binding:"required" example:"uuid"`
-	OrderItems []OrderItem `json:"orderItems" binding:"required" example:"{slice}"`
+	Client_id  string       `json:"client_id" binding:"required" example:"111"`
+	OrderItems []*OrderItem `json:"orderItems" binding:"required"`
 }
 
 type OrderItem struct {
-	Product_id string `json:"product_id" binding:"required" example:"uuid"`
-	Quantity   int32  `json:"quantity" binding:"required" example:"uuid"`
+	Product_id string `json:"product_id" binding:"required" example:"111"`
+	Quantity   int32  `json:"quantity" binding:"required" example:"111"`
 }
